--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.202",
+    "lodash": "^4.17.21",
     "vitest": "^1.1.3"
   },
   "devDependencies": {
